# nao_teleop_kinect

./: README.md
nao_teleop_gesture/: CMakeLists.txt  CMakeLists.txt~  package.xml
nao_teleop_gesture/config/: nao_teleop.rviz
nao_teleop_gesture/launch/: nao_all_control.launch  nao_all_control.launch~  nao_arm_control.launch  nao_arm_control.launch~  nao_hand_control.launch  nao_hand_control.launch~  nao_head_control.launch  nao_head_control.launch~  nao_motion_control.launch  nao_motion_control.launch~  nao_sim_all_control.launch~  nao_sim_arm_control.launch~
nao_teleop_gesture/src/: nao_arm_control.cpp  nao_hand_control.cpp  nao_head_control.cpp  nao_motion_control.cpp  nao_motion_control.cpp~
naoqi_bridge/naoqi_driver/: CMakeLists.txt
naoqi_bridge/naoqi_driver/launch/: naoqi_driver.launch  naoqi_driver.launch~
naoqi_bridge/naoqi_driver/nodes/: naoqi_joint_states.py~  naoqi_walker.py
naoqi_bridge/naoqi_driver/src/naoqi_driver/: naoqi_node.py  naoqi_node.py~
skeleton_tracker/: CMakeLists.txt  README.md  package.xml
skeleton_tracker/include/skeleton_tracker/: Skeleton.h
skeleton_tracker/launch/: skeleton_tracker.launch  skeleton_tracker.launch~
skeleton_tracker/msg/: Skeleton.msg
skeleton_tracker/src/: openni_skeleton.cpp  openni_skeleton.cpp~  skeleton_tracker.cpp  skeleton_tracker.cpp~
skeleton_tracker/srv/: SkeletonState.srv
speech_eus/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
speech_eus/launch/: gspeech.launch  gspeech.launch~  mari_gspeech.launch~  mari_tts_eus.launch~  nao_gspeech.launch~  nao_teleop_speech.launch~  nao_tts_eus.launch~  tts_eus.launch  tts_eus.launch~
speech_eus/nodes/: gspeech.py  gspeech.py~  tts_eus.py  tts_eus.py~
speech_eus/script/: ahotts.sh  curl.sh  curl.sh~
