<?xml version="1.0"?>
<package>
  <name>skeleton_tracker</name>
  <version>0.1.0</version>
  <description>The Skeleton tracker broadcasts the OpenNI skeleton frames using tf and publish skeleton type messages</description>
  <maintainer email="rodriguezigor86@gmail.com">Igor Rodriguez</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/rsait/NAO_ROS/skeleton_tracker</url>  
  <author email="tim.field@unknown.com">Tim Field</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
