<?xml version="1.0"?>
<package>
  <name>speech_eus</name>
  <version>0.0.0</version>
  <description>Basque language speech tools package</description>

  <author>Igor Rodriguez</author>
  <maintainer email="igor.rodriguez@ehu.eus">Igor Rodriguez</maintainer>
  <author email="igor.rodriguez@ehu.eus">Igor Rodriguez</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
